tests/should_fail/unmatched_brace.nds
-- Missing closing brace in map literal.
set x to {1: "a", 2: "b"
